--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -1,3 +1,28 @@
+snail_shell: "Snail Shell"
+snail_shell_id: "ID"
+snail_shell_grid_position: "Grid Position"
+snail_shell_world_position: "World Position"
+snail_shell_creator: "Creator"
+snail_shell_creator_unknown: "Unknown"
+snail_shell_access: "Access"
+snail_shell_size: "Size"
+snail_shell_pos1: "Position 1"
+snail_shell_pos2: "Position 2"
+snail_shell_area: "Area"
+snail_shell_template: "Template"
+snail_shell_color: "Color"
+snail_shell_break_disallowed: "You are not allowed to break other players' snail shells"
+snail_shell_enter_disallowed: "You are not allowed to enter this snail shell"
+snail_shell_enter_disallowed_hint: "Tell the shell's owner to add you to the whitelist"
+snail_shell_enter_notification: "{1} wants to enter your snail shell, but it is locked"
+snail_shell_lock_success: "You successfully locked this snail shell."
+snail_shell_lock_fail: "You can't lock this snail shell because you don't own it"
+snail_shell_lock_success_hint: "Others except for you can no longer enter it."
+snail_shell_unlock_success: "You successfully unlocked this snail shell."
+snail_shell_unlock_fail: "You can't unlock this snail shell because you don't own it"
+snail_shell_unlock_success_hint: "Now everyone can enter it."
+snail_shell_menu_open_fail: "You don't own this snail shell"
+
 cmd_action_copy: "Click to copy"
 cmd_action_click: "Click here"
 
@@ -16,6 +41,9 @@ cmd_count_view_latest: "View most recently created"
 cmd_create_help: "Creates a new snail shell"
 cmd_create_missing_type: "Specify a shell type: {1}"
 cmd_create_invalid_type: "Invalid shell type: {1}"
+cmd_create_invalid_color: "Invalid color: "
+cmd_create_missing_template: "Missing template name"
+cmd_create_invalid_template: "Invalid template name: "
 
 cmd_delete_help: "Deletes a snail shell"
 cmd_delete_confirm_heading: "Confirmation to delete Snail Shell"
@@ -23,7 +51,6 @@ cmd_delete_confirm_id: "ID: "
 cmd_delete_confirm_owner: "Owner: "
 cmd_delete_confirm_warning: "This cannot be undone!"
 cmd_delete_confirm_button: "Permanently delete this snail shell"
-cmd_delete_confirm_button_warning: "This is an irreversible action!"
 cmd_delete_success: "Deletion successful"
 
 cmd_give_help: "Gives you an item to teleport to the snail shell at your location"
@@ -60,3 +87,52 @@ cmd_tp_help: "Teleport you to the snail shell world."
 cmd_tp_help_id: "Teleports you to the specified snail shell."
 
 error_inventory_full: "Your inventory is full"
+
+ui_click_to_change: "Click to Change"
+ui_click_to_select: "Click to Select"
+ui_on: "On"
+ui_off: "Off"
+ui_selected: "Selected"
+
+ui_shell_add_to_inventory: "Click to add to your inventory"
+ui_shell_owner: "Owner: "
+ui_shell_owner_uuid: "UUID: "
+ui_shell_owner_transfer: "Click to transfer ownership"
+ui_shell_color: "Color: "
+
+ui_transfer_ownership_title: "Transfer Ownership"
+ui_transfer_ownership_success: "Ownership successfully transferred"
+
+ui_confirm_title: "Confirm: "
+ui_confirm_cancel: "Cancel"
+ui_confirm_confirm: "Confirm"
+
+ui_input_player_title: "Type Player Name..."
+ui_input_player_not_found: "Player not found on this server: "
+
+ui_access_control_title: "Access Control"
+ui_access_control_description: "Manage your whitelist / blacklist"
+ui_access_control_edit_blacklist: "Edit Blacklist"
+ui_access_control_blacklist_disabled: "Note: Blacklist is disabled"
+ui_access_control_edit_whitelist: "Edit Whitelist"
+ui_access_control_whitelist_disabled: "Note: Whitelist is disabled"
+ui_access_control_everybody: "Everybody"
+ui_access_control_everybody_description: "All players can enter this snail shell"
+ui_access_control_blacklist: "Blacklist"
+ui_access_control_blacklist_description: "Everyone except blacklisted players can enter this snail shell"
+ui_access_control_whitelist: "Whitelist"
+ui_access_control_whitelist_description: "Besides its owner, only players listed here can enter this snail shell"
+ui_access_control_nobody: "Nobody"
+ui_access_control_nobody_description: "Only the owner can enter this snail shell"
+ui_access_control_hint_op: "Server operators can always enter this snail shell"
+
+ui_player_list_add: "Add Player"
+ui_player_list_back: "Go Back"
+ui_player_list_remove: "Click to remove"
+ui_player_list_add_success: "{1} was added"
+
+ui_change_color_title: "Change Color"
+ui_change_color_current: "Current color"
+ui_change_color_rainbow_mode: "Rainbow Mode: "
+ui_change_color_rainbow_mode_description: "Make the color change automatically every {1} seconds"
+ui_change_color_rainbow_mode_toggle: "Click to toggle on / off"
