--- a/src/main/resources/lang/de.yml
+++ b/src/main/resources/lang/de.yml
@@ -87,12 +87,17 @@ cmd_new_type_hint: "Es ist in der Konfiguration bearbeitbar. Vergiss nicht, dass
 cmd_tp_help: "Teleportiert dich in die Schneckenhauswelt."
 cmd_tp_help_id: "Teleportiert dich zum angegebenen Schneckenhaus."
 
+cmd_tp_other_loading: "Laden..."
+cmd_tp_other_no_shell: "Diesem Spieler gehört kein Schneckenhaus"
+cmd_tp_other_done: "Erfolgreich teleportiert"
+
 cmd_list_load: "Laden..."
 cmd_list_help: "Listet die Schneckenhäuser eines Spielers auf"
 cmd_list_entry: "- Schneckenhaus {1}"
 cmd_list_hint_click: "Für mehr Informationen auf eine ID klicken"
 
 error_inventory_full: "Dein Inventar ist voll"
+error_permission: "Du hast keine Befugnis für diese Aktion. Fehlende Berechtigung: {1}"
 
 ui_click_to_change: "Zum Ändern klicken"
 ui_click_to_select: "Zum Auswählen klicken"
@@ -102,7 +107,6 @@ ui_selected: "Ausgewählt"
 
 ui_shell_add_to_inventory: "Klicken, um zu deinem Inventar hinzuzufügen"
 ui_shell_owner: "Eigentümer: "
-ui_shell_owner_uuid: "UUID: "
 ui_shell_owner_transfer: "Zum Übereignen klicken"
 ui_shell_color: "Farbe: "
 
@@ -118,6 +122,7 @@ ui_input_player_not_found: "Spieler nicht auf dem Server gefunden: "
 
 ui_access_control_title: "Zutrittsverwaltung"
 ui_access_control_description: "Verweigere / gewähre Spielern den Zutritt"
+ui_access_control_click_action: "Zum Öffnen klicken"
 ui_access_control_edit_blacklist: "Negativliste bearbeiten"
 ui_access_control_blacklist_disabled: "Hinweis: Negativliste ist ausgeschaltet"
 ui_access_control_edit_whitelist: "Positivliste bearbeiten"
@@ -142,3 +147,25 @@ ui_change_color_current: "Aktuelle Farbe"
 ui_change_color_rainbow_mode: "Regenbogenmodus: "
 ui_change_color_rainbow_mode_description: "Automatischer Farbwechsel alle {1} Sekunden"
 ui_change_color_rainbow_mode_toggle: "Klicken zum An- oder Ausschalten"
+
+ui_increase_size_button_label: "Vergrößern auf "
+ui_increase_size_ingredient: "Benötigt: "
+ui_increase_size_click_action: "Zum Vergrößern klicken"
+ui_increase_size_ingredient_error: "Du kannst dir keine Vergrößerung leisten"
+
+color_white: "weiß"
+color_orange: "orange"
+color_magenta: "magenta"
+color_light_blue: "hellblau"
+color_yellow: "gelb"
+color_lime: "hellgrün"
+color_pink: "pink"
+color_gray: "grau"
+color_light_gray: "hellgrau"
+color_cyan: "türkis"
+color_purple: "lila"
+color_blue: "blau"
+color_brown: "braun"
+color_green: "grün"
+color_red: "rot"
+color_black: "schwarz"
