--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -97,6 +97,7 @@ cmd_list_entry: "- Snail Shell {1}"
 cmd_list_hint_click: "Click an ID to get more information"
 
 error_inventory_full: "Your inventory is full"
+error_permission: "You are not allowed to do this. Missing permission: {1}"
 
 ui_click_to_change: "Click to Change"
 ui_click_to_select: "Click to Select"
@@ -106,7 +107,6 @@ ui_selected: "Selected"
 
 ui_shell_add_to_inventory: "Click to add to your inventory"
 ui_shell_owner: "Owner: "
-ui_shell_owner_uuid: "UUID: "
 ui_shell_owner_transfer: "Click to transfer ownership"
 ui_shell_color: "Color: "
 
@@ -122,6 +122,7 @@ ui_input_player_not_found: "Player not found on this server: "
 
 ui_access_control_title: "Access Control"
 ui_access_control_description: "Manage your whitelist / blacklist"
+ui_access_control_click_action: "Click to open"
 ui_access_control_edit_blacklist: "Edit Blacklist"
 ui_access_control_blacklist_disabled: "Note: Blacklist is disabled"
 ui_access_control_edit_whitelist: "Edit Whitelist"
@@ -146,3 +147,25 @@ ui_change_color_current: "Current color"
 ui_change_color_rainbow_mode: "Rainbow Mode: "
 ui_change_color_rainbow_mode_description: "Make the color change automatically every {1} seconds"
 ui_change_color_rainbow_mode_toggle: "Click to toggle on / off"
+
+ui_increase_size_button_label: "Increase Size to "
+ui_increase_size_ingredient: "Requires "
+ui_increase_size_click_action: "Click to increase size"
+ui_increase_size_ingredient_error: "You can't afford this"
+
+color_white: "White"
+color_orange: "Orange"
+color_magenta: "Magenta"
+color_light_blue: "Light Blue"
+color_yellow: "Yellow"
+color_lime: "Lime"
+color_pink: "Pink"
+color_gray: "Gray"
+color_light_gray: "Light Gray"
+color_cyan: "Cyan"
+color_purple: "Purple"
+color_blue: "Blue"
+color_brown: "Brown"
+color_green: "Green"
+color_red: "Red"
+color_black: "Black"
